Add node-fetch dependency

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "name": "your-project-name",
+  "version": "1.0.0",
   "dependencies": {
     "node-fetch": "^3.3.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
